--- a/.github/workflows/manual_release.yml
+++ b/.github/workflows/manual_release.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build-and-release:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     
     steps:
       - name: Checkout code
@@ -24,8 +24,17 @@ jobs:
       - name: Install dependencies
         run: bun install
         
-      - name: Build Executable
-        run: bun build src/index.ts --compile --outfile zombie-watcher.exe
+      - name: Build Windows
+        run: bun build src/index.ts --compile --target bun-windows-x64 --outfile zombie-watcher-win.exe
+
+      - name: Build Linux
+        run: bun build src/index.ts --compile --target bun-linux-x64 --outfile zombie-watcher-linux
+
+      - name: Build macOS (x64)
+        run: bun build src/index.ts --compile --target bun-darwin-x64 --outfile zombie-watcher-macos
+
+      - name: Build macOS (Silicon)
+        run: bun build src/index.ts --compile --target bun-darwin-arm64 --outfile zombie-watcher-macos-arm64
         
       - name: Create Tag
         run: |
@@ -41,7 +50,11 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           tag_name: ${{ inputs.tag_name }}
-          files: zombie-watcher.exe
+          files: |
+            zombie-watcher-win.exe
+            zombie-watcher-linux
+            zombie-watcher-macos
+            zombie-watcher-macos-arm64
           fail_on_unmatched_files: true
           generate_release_notes: true
         env:
